Day_3 added following the Day's Objectives. Added new pom.xml into Day_2